<resources>
    <string name="app_name">wedrive</string>
    <string name="title_activity_map">Map</string>


    <string name="error_empty">Поле не може бути порожнім</string>
    <string name="error_len">Мінімальна довжина %1$s символи</string>

    <string name="user_exist">Користувач вже зареєстрований в платформі</string>


    <string name="menu_profile">Профіль</string>
    <string name="menu_request">Замовлення</string>
    <string name="menu_chat">Повідомлення</string>
    <string name="menu_log_out">Вихід</string>

    <string name="change">Змінити</string>
    <string name="run_route">Поіхали</string>
    <string name="stop_route">Завершити</string>
    <string name="wallet">На рахунку</string>
    <string name="total_earned">Зароблено</string>
    <string name="rating">Рейтинг</string>
    <string name="location_time">Час</string>
    <string name="location_time_delay">Затримка</string>
    <string name="location_update">Змінити локацію</string>
    <string name="passenger_count">Пасажирів</string>
    <string name="trip_count">Поїздок</string>
    <string name="payment">Розрахунок</string>
    <string name="price">Вартість</string>
    <string name="pay_cash">Готівка</string>
    <string name="pay_card">Картка</string>
    <string name="send_request">Відправити запит</string>
    <string name="cancel_request">Відмінити запит</string>
    <string name="save_btn">Зберегти</string>
    <string name="edit_btn">Редагувати</string>
    <string name="cancel_btn">Скасувати</string>
    <string name="delete_btn">Видалити</string>
    <string name="exit">Вихід</string>
    <string name="map">Карта</string>



    <string name="login_title"><b>Авторизація</b> за номером телефону</string>
    <string name="register_title"><b>Реєстрація</b> нового користувача</string>
    <string name="registration">Реєстрація в платформі</string>
    <string name="back_to_login">Спробувати інший номер?</string>
    <string name="go_to_login">Вже зареєстрований?</string>
    <string name="sign_in">Вхід</string>
    <string name="next">Далі</string>
    <string name="password">Пароль</string>
    <string name="invalid_phone">Невірно вказаний номер</string>


    <string name="pin_title">Валідація телефону</string>
    <string name="pin_sub_title">Введіть код з SMS. Сессія: %1$s</string>
    <string name="pin_button">Підтвердити</string>
    <string name="pin_resend">Відправити ще раз? </string>
    <string name="pin_resend_wait">Відправити ще раз через: %1$s сек </string>


    <string name="message_chat_label">Повідомлення</string>

    <string name="car_brand">Бренд</string>
    <string name="car_model">Модель</string>
    <string name="car_year">Год</string>
    <string name="car_color">Цвет</string>
    <string name="car_number">Номер</string>


    <string name="route_name">Маршрут</string>
    <string name="route_description">Введіть маршрут відправлення та прибуття. Наприклад: Киів - Васильків. Час буде вказанно в окремій локаціі кожного з маршрутів. </string>

    <string name="profile_name">Ім\'я</string>
    <string name="profile_surname">Фамілія</string>
    <string name="profile_phone">Телефон</string>
    <string name="profile_phone_hint">(000) 000-00-00</string>


    <string name="message_input_placeholder">Повідомлення...</string>
</resources>
