<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AbstractCodeActivity"
    style="@style/p20"
    >

    <TextView
        style="@style/PinTitle"
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pin_title" />

    <TextView
        style="@style/PinSubTitle"
        android:id="@+id/pin_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pin_sub_title" />


    <LinearLayout
        android:id="@+id/code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            style="@style/PinNumber"
            android:id="@+id/cn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:maxLength="2"
            android:inputType="numberSigned" />

        <EditText
            style="@style/PinNumber"
            android:id="@+id/cn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:maxLength="1"
            android:inputType="numberSigned" />

        <EditText
            style="@style/PinNumber"
            android:id="@+id/cn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:maxLength="1"
            android:inputType="numberSigned" />

        <EditText
            style="@style/PinNumber"
            android:id="@+id/cn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:maxLength="1"
            android:inputType="numberSigned" />

    </LinearLayout>

    <Button
        android:id="@+id/pin_verify_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pin_button"
        android:enabled="false"
        style="@style/YellowRoundedButton"/>

    <TextView
        android:id="@+id/pin_resend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pin_resend"
        android:onClick="generateNewCode"
        style="@style/TextCenterButton"
        />

</LinearLayout>