<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    android:padding="10dp"
    tools:context=".CreateNewRouteActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView8"
            style="@style/Form.Label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_name" />

        <EditText
            android:id="@+id/route_name_input"
            style="@style/Form.Input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView9"
            style="@style/Form.Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/route_description" />

    </LinearLayout>

    <Button
        android:id="@+id/route_save_btn"
        style="@style/Form.Btn.SuccessBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="2dp"
        android:text="@string/save_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</RelativeLayout>