<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/bg_grey"
    tools:context=".ProfileEditActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="30dp">

        <TextView
            android:id="@+id/profile_cancel_btn"
            style="@style/TextOrangeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_btn" />

        <TextView
            android:id="@+id/profile_save_btn"
            style="@style/TextGreyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:text="@string/save_btn" />

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_below="@+id/profile_cancel_btn"
            android:layout_alignParentStart="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="24dp"
            app:srcCompat="@drawable/default_image_dark" />

        <ImageButton
            android:id="@+id/profile_image_choose"
            android:layout_width="38dp"
            android:layout_height="42dp"
            android:layout_alignStart="@+id/profile_image"
            android:layout_alignTop="@+id/profile_image"
            android:layout_alignEnd="@+id/profile_image"
            android:layout_alignBottom="@+id/profile_image"
            android:layout_marginStart="31dp"
            android:layout_marginTop="29dp"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="29dp"
            android:alpha="0.8"
            android:background="@null"
            android:scaleType="fitCenter"
            android:tint="@color/yellow"
            app:srcCompat="@drawable/ic_camera" />

        <EditText
            android:id="@+id/profile_name"
            style="@style/Form.Input2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/profile_image"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="-1dp"
            android:layout_toEndOf="@+id/profile_image"
            android:ems="10"
            android:hint="@string/profile_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/profile_last_name"
            style="@style/Form.Input2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_name"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="0dp"
            android:layout_toEndOf="@+id/profile_image"
            android:ems="10"
            android:hint="@string/profile_surname"
            android:inputType="textPersonName" />

    </RelativeLayout>

    <View
        android:id="@+id/divider6"
        android:layout_width="match_parent"
        android:layout_height="1.1dp"
        android:layout_weight="1"
        android:background="@color/message_grey_line" />

    <View
        android:id="@+id/divider7"
        android:layout_width="match_parent"
        android:layout_height="1.1dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:background="@color/message_grey_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_phone" />

            <TextView
                android:id="@+id/profile_phone"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/profile_phone_hint"
                android:paddingRight="10dp"
                android:textAlignment="textEnd" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>