<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:background="#fcbe07"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/main_background_yellow_city2_c" />

    <androidx.cardview.widget.CardView
        style="@style/LoginBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.396">

        <LinearLayout
            style="@style/p20"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                style="@style/LoginBoxTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_title" />


            <ViewFlipper
                android:id="@+id/loginFlipper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:inAnimation="@android:anim/slide_in_left"
                android:outAnimation="@android:anim/slide_out_right">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <EditText
                            android:id="@+id/phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/input_bg_rounded"
                            android:ems="10"
                            android:inputType="phone"
                            android:paddingStart="100dp"
                            android:textSize="18sp" />

                        <com.hbb20.CountryCodePicker
                            android:id="@+id/ccp"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:layout_alignParentTop="true"
                            app:ccp_customMasterCountries="UA"
                            app:ccp_defaultLanguage="UKRAINIAN"
                            app:ccp_defaultNameCode="UA"
                            app:ccp_showNameCode="false" />

                    </RelativeLayout>

                    <Button
                        android:id="@+id/button2"
                        style="@style/LoginBoxButton"
                        android:layout_width="match_parent"
                        android:onClick="showPasswordInput"
                        android:text="@string/next" />

                    <TextView
                        android:id="@+id/textView26"
                        style="@style/LoginBoxSubButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="goToLogin"
                        android:text="@string/go_to_login" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/input_bg_rounded"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="100dp"
                        android:textSize="18sp" />

                    <Button
                        style="@style/LoginBoxButton"
                        android:layout_width="match_parent"
                        android:onClick="register"
                        android:text="@string/sign_in" />

                    <TextView
                        android:id="@+id/textView27"
                        style="@style/LoginBoxSubButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="goToLogin"
                        android:text="@string/go_to_login" />

                </LinearLayout>
            </ViewFlipper>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>