<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/user_image"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="5dp"
                    app:srcCompat="@drawable/btn_radio_shape" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/user_image"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="4dp"
                    android:layout_toEndOf="@+id/user_image"
                    android:layout_weight="1"
                    android:text="Full name" />

                <TextView
                    android:id="@+id/textView32"
                    style="@style/Sheet.LocationInfoMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_name"
                    android:layout_alignStart="@+id/user_name"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="4dp"
                    android:text="Hi! Some went to Kiev?" />

            </RelativeLayout>

            <androidx.cardview.widget.CardView
                style="@style/Sheet.LocationCardInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <androidx.gridlayout.widget.GridLayout
                    style="@style/Sheet.LocationContent"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:columnCount="3"
                    app:rowCount="3">


                    <ImageView
                        android:id="@+id/imageView4"
                        style="@style/Sheet.LocationIcon"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:alpha="0.3"
                        app:layout_columnWeight="1"
                        app:layout_gravity="center"
                        app:srcCompat="@drawable/ic_clock" />

                    <ImageView
                        android:id="@+id/imageView5"
                        style="@style/Sheet.LocationIcon"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        app:layout_columnWeight="1"
                        app:layout_gravity="center"
                        app:srcCompat="@drawable/ic_smile" />

                    <ImageView
                        android:id="@+id/imageView6"
                        style="@style/Sheet.LocationIcon"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        app:layout_columnWeight="1"
                        app:layout_gravity="center"
                        app:srcCompat="@drawable/ic_currency_usd" />

                    <TextView
                        android:id="@+id/location_time"
                        style="@style/Sheet.LocationInfoText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="00:00"
                        app:layout_columnWeight="1"
                        app:layout_gravity="center" />

                    <TextView
                        android:id="@+id/textView31"
                        style="@style/Sheet.LocationInfoText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        app:layout_columnWeight="1"
                        app:layout_gravity="center" />

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        app:layout_columnWeight="1"
                        app:layout_gravity="center"
                        app:srcCompat="@drawable/ic_credit_card" />

                    <TextView
                        android:id="@+id/textView30"
                        style="@style/Sheet.LocationInfoSubText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location_time"
                        app:layout_columnWeight="1"
                        app:layout_gravity="center" />

                    <TextView
                        style="@style/Sheet.LocationInfoSubText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/passenger_count"
                        app:layout_columnWeight="1"
                        app:layout_gravity="center" />

                    <TextView
                        style="@style/Sheet.LocationInfoSubText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/payment"
                        app:layout_columnWeight="1"
                        app:layout_gravity="center" />

                </androidx.gridlayout.widget.GridLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/location_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="visible">

                <Button
                    android:id="@+id/location_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Change location"
                    android:visibility="gone" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/request_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="visible">

                <RelativeLayout
                    android:id="@+id/request_user_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/request_user_image"
                        android:layout_width="55dp"
                        android:layout_height="55dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="5dp"
                        app:srcCompat="@drawable/btn_radio_shape" />

                    <TextView
                        android:id="@+id/request_user_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/request_user_image"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="4dp"
                        android:layout_toEndOf="@+id/request_user_image"
                        android:layout_weight="1"
                        android:text="Full name" />

                    <TextView
                        android:id="@+id/request_message"
                        style="@style/Sheet.LocationInfoMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/request_user_name"
                        android:layout_alignStart="@+id/request_user_name"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="4dp"
                        android:text="Hi! Some went to Kiev?" />

                </RelativeLayout>


                <EditText
                    android:id="@+id/request_message_inp"
                    style="@style/Messenger.Message.Input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/message_input_placeholder"
                    android:inputType="textMultiLine" />

                <Button
                    android:id="@+id/request_btn"
                    style="@style/Sheet.SuccessBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/send_request" />

                <Button
                    android:id="@+id/request_cancel_btn"
                    style="@style/Sheet.CancelBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel_request" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>